#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
################################################################


2013-01-08  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999971 released.

        * Updated fa -V to show custom files in user dir.


2013-01-08  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999970 released.

        * Updated fa -V to show custom files in user dir.


2013-01-08  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999969 released.

        * Fix for permissions in Makefile.PL.


2013-01-07  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999968 released.

        * Fix for permissions in Makefile.PL.


2013-01-07  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999967 released.

        * Fix for permissions in Makefile.PL.


2013-01-06  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999966 released.

        * Fix for MozRepl install in Makefile.PL.


2013-01-06  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999965 released.

        * More code to attempt permissions fix in Makefile.PL.


2013-01-05  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999964 released.

        * More code to attempt permissions fix in Makefile.PL.


2013-01-05  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999963 released.

        * More code to attempt permissions fix in Makefile.PL.


2013-01-04  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999962 released.

        * More code to attempt to fix Firefox download.


2013-01-02  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
