@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 8da58f6894aad30cd827a98d279fe04825297874 ChangeLog
+SHA1 b8005509614eab379c0f9dd84263fdc6d246e065 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 d910f2158f397101c20143f72890951dbff888b5 MANIFEST
-SHA1 a6c4342b058c74af0ca89b5f789a820b0b3b17b1 META.yml
-SHA1 a68857953bcb30f039e81a30465dcc8043d5f537 MYMETA.json
-SHA1 e4c0e43da70acfea8c926c733f7f93dcc74b2125 MYMETA.yml
-SHA1 3c419b816e078a316656c65e7185088e1a5e04df Makefile.PL
+SHA1 c8b12a072baed306a859c63b29962cd585f19f7c META.yml
+SHA1 9a398f0ab44b8daaaf7804ebc6c5eea5d888c870 MYMETA.json
+SHA1 7ae6d6f2419a72b5c3d993653753b9774e4c64e6 MYMETA.yml
+SHA1 ae7b24b0b60192936bdc81cb407937954ba656ca Makefile.PL
 SHA1 cbcb130fc9fe3f4d4dd8263e7b4ee4b39b182bd1 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 39cf02b95d140e1dd95b4c7486b225f29eacb90a bin/fullauto.pl
@@ -39,7 +39,7 @@ SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
 SHA1 0e48befcde75dd2161bf5241566e588b50cfe99f install_mozrepl_plugin.ahk
-SHA1 81b2fae048bcfd9714dbe5640f70d0b83e145fd9 lib/Net/FullAuto.pm
+SHA1 45b23896293dba6b4a8eec5aac7bc38d473120b7 lib/Net/FullAuto.pm
 SHA1 8a710a48bb21aa584949dbbe3649c0d5b2b084fc lib/Net/FullAuto/Custom/BackUp/README
 SHA1 b9b90c2707951d9d5753dc9ef9699abe7daddee9 lib/Net/FullAuto/Custom/README
 SHA1 b2282d66e77abab818cb5c894e164f82db09b720 lib/Net/FullAuto/Distro/fa_code.pm
@@ -50,13 +50,13 @@ SHA1 a2540f875220a8c9cb8ce121acdba2940574ad64 lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 de20aed635547529bd308e02954df2247198b781 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 5806b579c936d0e8a6eb8844192156722fbfc4d0 lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
-SHA1 c0365a4fb05a1d881bc2adfccf1f59fc6a66d896 lib/Net/FullAuto/FA_Core.pm
+SHA1 3c6e2ea1d4887d58216014798a0da2cc43403946 lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.12 (Cygwin)
 
-iEYEARECAAYFAlDsShAACgkQJM3IZYB6aOqZTgCfWeGROy2yp0lwoT1IehL4HPEW
-lL4An2X357vEkf0pUiBSr3b3z375j3Ih
-=3yfP
+iEYEARECAAYFAlDwc70ACgkQJM3IZYB6aOq8XwCeJ52lWeYgoHE+QG8rLF8TDcxJ
+VOwAnRHSLCtNI7Ydm4kmNk/+oCcRPOjp
+=e9Y4
 -----END PGP SIGNATURE-----
