@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.999971';
+our $VERSION='0.999972';
 
 
 use 5.005;
